fix navdrawer badge overflow in small divices

--- a/src/assets/scss/components/app/nav-drawer.scss
+++ b/src/assets/scss/components/app/nav-drawer.scss
@@ -8,7 +8,7 @@
   width: 50px;
 
   .logo {
-    transform: translateX(-50%);
+    //transform: translateX(-50%);
     transition: .5s ease-in-out .5s;
     will-change: transform;
 
